--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@tsparticles/engine": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
+    "github-calendar": "^2.3.4",
     "gsap": "^3.12.5",
     "next": "15.1.3",
     "react": "^19.0.0",
+    "react-activity-calendar": "^2.7.6",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
