--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[headers]]
-  for = "/*"
+for = "/hero.webp"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
